--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wxml-jump-to-component",
   "displayName": "wxml-jump-to-component",
   "description": "Navigate to WeChat Mini Program custom components from WXML files",
+  "publisher": "lvzl",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.92.0"
