--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Navigate to WeChat Mini Program custom components from WXML files",
   "icon": "./icon.png",
   "publisher": "lvzl",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.92.0"
   },
@@ -17,8 +17,12 @@
     "languages": [
       {
         "id": "wxml",
-        "aliases": ["wxml"],
-        "extensions": [".wxml"],
+        "aliases": [
+          "wxml"
+        ],
+        "extensions": [
+          ".wxml"
+        ],
         "configuration": "./language-configuration.json"
       }
     ],
