--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wxml-jump-to-component",
   "displayName": "wxml-jump-to-component",
   "description": "Navigate to WeChat Mini Program custom components from WXML files",
-  "icon": "icon.png",
+  "icon": "jump.png",
   "publisher": "lvzl",
   "version": "1.0.2",
   "engines": {
